NPT-20: Removed unnecessary test, mocked Heroes and introduced constants in HeroServiceTest